# soltick-solana

./: Cargo.toml  Readme.md
src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
